syntax = "proto3";

option optimize_for = CODE_SIZE;

// https://spclient.wg.spotify.com/bootstrap/v1/bootstrap
message BootstrapResponse {
	UcsResponseWrapperV0 ucsResponseV0 = 2;
	TrialsFacadeResponseWrapperV1 trialsFacadeResponseV1 = 3;
};

message UcsResponseWrapperV0 {
	UcsResponseWrapperSuccess success = 1;
	Error error = 2;
}

message UcsResponseWrapperSuccess {
	UcsResponseWrapper customization = 1;
}

message UcsResponseWrapper {
	UcsResponse success = 1;
	Error error = 2;
}

message TrialsFacadeResponseWrapperV1 {
	TrialsFacadeResponseWrapperSuccess success = 1;
	Error error = 2;
}

message TrialsFacadeResponseWrapperSuccess {
	int32 filed1 = 1;
}

message UcsResponse {
	ResolveResponse resolveSuccess = 1;
	Error resolveError = 2;
	AccountAttributesResponse accountAttributesSuccess = 3;
	Error accountAttributesError = 4;
	int64 fetchTimeMillis = 5;
}

message ResolveResponse {
	Configuration configuration = 1;
}

message Configuration {
	string configurationAssignmentId = 1;
	int64 fetchTimeMillis = 2;
	repeated AssignedValue assignedValues = 3;
}

message AssignedValue {
	PropertyId propertyId = 1;
	Metadata metadata = 2;
	BoolValue boolValue = 3;
	IntValue intValue = 4;
	EnumValue enumValue = 5;
}

message PropertyId {
	string scope = 1;
	string name = 2;
}

message Metadata {
	int64 policyId = 1;
	string externalRealm = 2;
	int64 externalRealmId = 3;
}

message BoolValue {
	bool value = 1;
}

message EnumValue {
	string value = 1;
}

message IntValue {
	int32 value = 1;
}

message AccountAttributesResponse {
	map<string, AccountAttribute> accountAttributes = 1;
}

message AccountAttribute {
	optional bool boolValue = 2;
	optional int64 longValue = 3;
	optional string stringValue = 4;
}

message Error {
	int32 errorCode = 1;
	string message = 2;
	optional string logId = 3;
}
